# sdl3-lib-app

./: .clang-format  .gitignore  .ignore  CMakeLists.txt
app/: CMakeLists.txt
app/src/: Entrypoint.cpp
cmake/: CompilerWarnings.cmake  Dependencies.cmake  Options.cmake
include/mylib/: mylib.h  mylib_main.h
include/mylib/core/: Application.h
include/mylib/utils/: Arguments.h  Logger.h  macros.h
src/: CMakeLists.txt  mylib.cpp
src/core/: Application.cpp
src/utils/: Arguments.cpp  Logger.cpp
